<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mareunion.addActivity.AddActivity">
    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <Spinner
        android:id="@+id/choix_salle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/spinner_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choix de la salle:"
        android:textSize="@dimen/choix_de_la_salle_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/participantsRecyclerView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="choisissez une heure"
        android:gravity="center"
        android:textSize="@dimen/choix_de_l_heure_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choix_salle" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Objet de la réunion"
        android:gravity="center"
        android:textSize="@dimen/objet_reunion_textSize"
        app:layout_constraintEnd_toEndOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="E-mail participant"
        android:textSize="@dimen/objet_reunion_textSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextOganisateur" />

    <ImageButton
        android:id="@+id/plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/plus_margin"
        android:layout_marginLeft="@dimen/plus_margin"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextEmailAddress"
        app:layout_constraintStart_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toTopOf="@+id/editTextTextEmailAddress"
        app:srcCompat="@drawable/baseline_add_circle_white_18"
        app:tint="@color/purple_500" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/participantsRecyclerView"
        android:name="com.example.mareunion.ParticipantsFragment"
        android:layout_width="@dimen/participant_recyclerView_width"
        android:layout_height="@dimen/participant_recyclerView_height"
        android:background="#F8EEF8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <Button
        android:id="@+id/button_planifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Planifier la réunion"
        android:textSize="@dimen/planifier_textSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <EditText
        android:id="@+id/editTextOganisateur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/editText_organisateur_margin"
        android:ems="10"
        android:gravity="center"
        android:hint="E-mail Organisateur"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/editText_organisateur"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include" />

    <TextView
        android:layout_marginTop="@dimen/imageButton_margin"
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="calendar"
        android:ems="10"
        android:gravity="center"
        android:hint="selectionnez une date"
        android:inputType="date"
        android:textSize="@dimen/planifier_textSize"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</androidx.constraintlayout.widget.ConstraintLayout>