<resources>
    <string name="app_name">Ma reunion</string>

    <string-array name="salles">Spinner Salles
        <item>Peach</item>
        <item>Mario</item>
        <item>Luigi</item>
        <item>Bowser</item>
        <item>Warrio</item>
        <item>Waluigi</item>
        <item>Yoshi</item>
        <item>Toad</item>
        <item>Cupa</item>
        <item>Étoile</item>
    </string-array>
    <string name="filtre_View_open">Open filtreView</string>
    <string name="filtre_view_close">Close filtreView</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>